added transion effect

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,7 @@ body {
   background-color: var(--bg);
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  transition: all .3s ease;
 }
 
 
