--- a/src/components/Main/TotalCards.scss
+++ b/src/components/Main/TotalCards.scss
@@ -2,7 +2,8 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
-  transform: translateY(-50%);
+  transform: translateY(-40%);
+
   .total-card {
     display: flex;
     flex-direction: column;
@@ -14,26 +15,35 @@
     flex: 1;
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
     border-top: 4px solid transparent;
+    transition: all .3s ease;
+    cursor: pointer;
+
+    &:hover {
+      opacity: .8;
+    }
+
     .total-card__user {
       display: flex;
       align-items: center;
-      gap: .75rem;
 
       h3 {
         color: var(--text-gray);
       }
 
       img {
-        width: 1.25rem; height: auto;
+        width: 1.25rem;
+        height: auto;
       }
     }
 
     .total-card__numbers {
       text-align: center;
+
       .followers {
         font-size: 4rem;
         text-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
       }
+
       .followers-text {
         color: var(--text-gray);
         letter-spacing: .5rem;
@@ -45,11 +55,14 @@
       display: flex;
       align-items: center;
       gap: .5rem;
+
       img {
-        height: auto; width: 1rem;
+        width: 1rem;
+        height: auto;
       }
     }
   }
+
   .total-card.facebook {
     border-top-color: var(--blue-600-fb);
   }
@@ -70,6 +83,7 @@
     transform: translateY(-20%);
     grid-template-columns: repeat(2, 1fr);
   }
+
   @media (max-width: 768px) {
     grid-template-columns: 1fr;
     transform: translateY(-10%);
