--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,7 +1,8 @@
 nav {
   border-radius: 0 0 2rem 2rem;
-  padding: 2rem 0 15rem;
+  padding: 1rem 0 10rem;
   background-color: var(--top-bg);
+  transition: all .3s ease;
   .navbar {
     display: flex;
     justify-content: space-between;
